Revert "modal scrollbar bug fix css"
This reverts commit e78c6fe1e3ce0badd737967ae4c8a39553936382.
There is no need for it, since there is a solution (without
unnecessary use of !important) in commit 18eb4c7

--- a/app/assets/stylesheets/adl/work.scss
+++ b/app/assets/stylesheets/adl/work.scss
@@ -62,9 +62,5 @@
   }
 }
 
-body.modal-open .workNavbarFixContainer, body.modal-open .workHeaderFixContainer, body.modal-open #header-navbar{
-  right: 15px!important;
-}
-
 
 
